# notebook-ed

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  requirements.txt  setup.py  test.py  todo
.github/workflows/: python-publish.yml
github/workflow/: main.yaml
notebook-ed/: converter.py
notebook-ed/test/: test_converter.py
notebook_ed/: __init__.py  argumentParser.py  converter.py  ignoreFIles.py
notebook_ed/test/: test_converter.py
notebook_ed_venv/: pyvenv.cfg
notebook_ed_venv/Scripts/: activate  activate.bat
py2nb/: converter.py
py2nb_env/: pyvenv.cfg
py2nb_env/Scripts/: activate  activate.bat  py2nb-script.py
