[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py2nb"
version = "0.1.0"
description = "A tool to convert .py files to .ipynb"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "https://github.com/w3cdpass/py2nb/blob/main/LICENSE"}
authors = [
    {name = "w3cdpass", email = "kupasva663@gmail.com"}
]
homepage = "https://github.com/w3cdpass/py2nb"
keywords = ["python", "converter", "notebook", "jupyter", "py2nb", "ipynb", "automation", "development", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/w3cdpass/py2nb"
"Bug Tracker" = "https://github.com/w3cdpass/py2nb/issues"

[project.dependencies]
nbformat = ["*"]
colorama = ["*"]

[tool.setuptools]
packages = ["py2nb"]

[tool.setuptools.entry-points.console_scripts]
py2nb = "py2nb.main:main"
