[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-ed"
version = "0.1.3"
description = "A tool to convert .py files to .ipynb"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["nbformat", "colorama"]
license = {file = "LICENSE"}
authors = [
    {name = "w3cdpass", email = "kupasva663@gmail.com"}
]
keywords = ["python", "converter", "notebook", "jupyter", "py2nb", "ipynb", "automation", "development", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/w3cdpass/notebook-ed"
"Bug Tracker" = "https://github.com/w3cdpass/notebook-ed/issues"

[project.scripts]
notebook-ed = "notebook_ed.converter:main"
